Fixed overflow

--- a/client/src/Home/Home.scss
+++ b/client/src/Home/Home.scss
@@ -63,7 +63,6 @@
 	user-select: none;
 	width: 100vw;
 	flex-direction: column;
-	overflow-y: auto;
 	font-weight: bold;
 	&__Title {
 		margin: 5rem 0 1.25rem;
